@startuml
skinparam monochrome true
skinparam shadowing false
skinparam linetype ortho
skinparam defaultFontName Arial

title Sajha Auction - Class Diagram (Eloquent models)

note as N1
  Attribute names and types are taken from the migrated database schema.
  Every model also carries created_at and updated_at.
  Relationship labels are the Eloquent relation methods.
end note

class User <<Authenticatable, Notifiable>> {
  +id : bigint
  +google_id : string
  +name : string
  +email : string
  +username : string
  +phone : string
  +date_of_birth_en : date
  +daate_of_birth_np : string
  +gender : string
  +bio : text
  +avatar : string
  -password : string <<hashed>>
  +is_verified : bool
  +is_seller : bool
  +seller_application_pending : bool
  +is_auction_allowed : bool
  +status : string
  --
  +isActiveStatus() : bool
  +scopeActive(query) : Builder
}

class Admin <<Authenticatable, Notifiable>> {
  +id : bigint
  +name : string
  +email : string
  +phone : string
  +role : string
  +position : string
  +date_of_joining : string
  +gender : string
  -password : string <<hashed>>
  +avatar : string
  +address : string
  +status : string
  --
  +receivesBroadcastNotificationsOn() : string
}

class DocumentImage {
  +id : bigint
  +user_id : bigint
  +type : DocumentImageType
  +image : string
  +is_approved : bool
  +is_rejected : bool
}

class Category {
  +id : bigint
  +name : string
  +slug : string
  +description : text
  +image : string
  +icon : string
  +color : string
  +status : string
  +sort_order : int
  --
  +children() : HasMany
}

class SubCategory {
  +id : bigint
  +category_id : bigint
  +name : string
  +slug : string
  +description : text
  +image : string
  +icon : string
  +color : string
  +status : string
  +sort_order : int
}

class Product {
  +id : bigint
  +sku : string
  +seller_id : bigint
  +sub_category_id : bigint
  +name : string
  +slug : string
  +description : text
  +specifications : text
  +condition : string
  +usage_duration : string
  +purchase_date : date
  +quantity : string
  +retail_price : decimal(15,2)
  +sale_price : decimal(15,2)
  +negotiable : ProductNegotiability
  +listing_type : ProductSaleType
  +is_approved : bool
  +is_featured : bool
  +is_trending : bool
  +views_count : int
  +location : string
  +meetup_location : string
  +meetup_instructions : text
  +delivery_available : bool
  +expires_at : datetime
  +status : string
  --
  +isDirectSell() : bool
  +isAuction() : bool
  +isWishlistedBy(user) : bool
  +logTimeline(eventType, title, description, actor) : ProductTimeline
  +approveListing() : void
  +getStockQuantityAttribute() : int
  +getEstimatedValueAttribute() : float
  +getSuggestedStartingPriceAttribute() : float
}

class ProductImage {
  +id : bigint
  +product_id : bigint
  +path : string
  +image_type : ProductImageType
  +sort_order : int
}

class ProductTimeline {
  +id : bigint
  +product_id : bigint
  +event_type : string
  +title : string
  +description : text
  +actor_id : bigint
}

class Auction {
  +id : bigint
  +product_id : bigint
  +auction_type : string
  +winner_id : bigint
  +start_time : datetime
  +start_time_np : string
  +end_time : datetime
  +end_time_np : string
  +extended_end_time : datetime
  +current_price : decimal(12,2)
  +winning_price : decimal(12,2)
  +total_bids : int
  +status : string
  +settlement_reason : text
  --
  +isLive() : bool
  +isUpcoming() : bool
  +isEnded() : bool
  +getStepIncrement() : float
  +getMinNextBid() : float
  +getEffectiveEndTimeAttribute() : datetime
}

class TraditionalAuction {
  +id : bigint
  +auction_id : bigint
  +starting_bid : decimal(12,2)
  +reserve_price : decimal(12,2)
  +min_bid_increment : decimal(12,2)
  +timer_start_seconds : int
  +timer_reset_seconds : int
}

class Bid {
  +id : bigint
  +auction_id : bigint
  +bidder_id : bigint
  +bid_amount : decimal(12,2)
  +max_proxy_amount : decimal(12,2)
  +is_proxy : bool
  +ip_address : string
  +placed_at : time
}

class Order {
  +id : bigint
  +order_number : string
  +buyer_id : bigint
  +seller_id : bigint
  +auction_id : bigint
  +status : string
  +total_amount : decimal(15,2)
  +deposit_amount : decimal(15,2)
  +deposit_status : string
  +deposit_transaction_uuid : string
  +payment_method : string
  +payment_status : string
  +handover_type : string
  +meetup_location : string
  +meetup_time : datetime
  +meetup_time_np : string
  +shipping_address : text
  +buyer_phone : string
  +notes : text
  +cancellation_reason_category : string
  +cancellation_note : text
  --
  +needsDeposit() : bool
  +getStatusBadgeAttribute() : string
  +getStatusLabelAttribute() : string
}

class OrderItem {
  +id : bigint
  +order_id : bigint
  +product_id : bigint
  +price : decimal(15,2)
  +quantity : int
  +subtotal : decimal(15,2)
}

class CartItem {
  +id : bigint
  +user_id : bigint
  +product_id : bigint
  +quantity : int
}

class Wishlist {
  +id : bigint
  +user_id : bigint
  +product_id : bigint
}

class Conversation {
  +id : bigint
  +product_id : bigint
  +buyer_id : bigint
  +seller_id : bigint
  +last_message_at : datetime
  --
  +hasParticipant(user) : bool
}

class ChatMessage {
  +id : bigint
  +conversation_id : bigint
  +sender_id : bigint
  +body : text
  +read_at : datetime
}

class FaqCategory {
  +id : bigint
  +name : string
  +slug : string
  +sort_order : int
}

class Faq {
  +id : bigint
  +faq_category_id : bigint
  +question : string
  +answer : text
  +sort_order : int
  +is_active : bool
}

class Setting {
  +id : bigint
  +key : string
  +value : text
  +group : string
  --
  +{static} get(key, default) : mixed
  +{static} set(key, value, group) : Setting
}

class Subscriber {
  +id : bigint
  +email : string
}

class AiChatMessage {
  +id : bigint
  +user_id : bigint
  +session_id : string
  +role : string
  +body : text
  +is_error : bool
  --
  +scopeForOwner(query, userId, sessionId) : Builder
  +scopeSameOwnerAs(query, message) : Builder
}

' catalogue
Category "1" *-- "0..*" SubCategory : subCategories()\ncategory_id NOT NULL, cascade
SubCategory "1" o-- "0..*" Product : products()\nsub_category_id NOT NULL, cascade
User "1" o-- "0..*" Product : products()\nseller_id NOT NULL, cascade
Product "1" *-- "0..*" ProductImage : images() / proofImages()\ncascade
Product "1" *-- "0..*" ProductTimeline : timelines()\ncascade
ProductTimeline "0..*" --> "0..1" User : actor()\nactor_id nullable, set null

' auction
Product "1" *-- "0..1" Auction : auction() hasOne\ncascade
Auction "1" *-- "0..1" TraditionalAuction : traditionalAuction() hasOne\ncascade
Auction "1" *-- "0..*" Bid : bids()\ncascade
User "1" <-- "0..*" Bid : bidder()\nbidder_id NOT NULL, cascade
Auction "0..*" --> "0..1" User : winner()\nwinner_id nullable

' orders
User "1" <-- "0..*" Order : buyer()\nbuyer_id NOT NULL
User "1" <-- "0..*" Order : seller()\nseller_id NOT NULL
Auction "0..1" <-- "0..*" Order : auction()\nnullable, set null
Order "1" *-- "1..*" OrderItem : items()\ncascade
OrderItem "0..*" --> "1" Product : product()

' cart and wishlist
User "1" o-- "0..*" CartItem : cartItems()
CartItem "0..*" --> "1" Product : product()
User "1" o-- "0..*" Wishlist : wishlists()
Wishlist "0..*" --> "1" Product : product()

' messaging
Product "1" <-- "0..*" Conversation : product()
User "1" <-- "0..*" Conversation : buyer()
User "1" <-- "0..*" Conversation : seller()
Conversation "1" *-- "0..*" ChatMessage : messages()
User "1" <-- "0..*" ChatMessage : sender()

' identity and content
User "1" *-- "0..*" DocumentImage : documentImages()
FaqCategory "1" *-- "0..*" Faq : faqs()
User "0..1" <-- "0..*" AiChatMessage : user_id nullable\n(guests use session_id)

@enduml
